# Burrata-Schedule

./: package-lock.json
Burrata/BackEnd/: Dockerfile  create_admin.py  database.py  main.py  models.py  pyproject.toml  routes.py
Burrata/BackEnd/AI/: ai_requests.py  prompts.py
Burrata/BackEnd/alembic/: env.py
Burrata/BackEnd/alembic/versions/: 19efcc481cfd_.py  2e6578dfb8e6_add_schedules_fk_cascade.py  3222225b9549_fixed_shiftsvalues.py  42dbac70f75a_added_department.py  (+21 more)
Burrata/BackEnd/app/: main.py
Burrata/BackEnd/config/: config.py
Burrata/BackEnd/database/: database.py  database_requests.py  models.py
Burrata/BackEnd/redis_/: redis_requests.py  redis_settings.py
Burrata/BackEnd/routes/: __init__.py  auth.py  auth_admin_route.py  check_message_route.py  claims.py  delete_user_route.py  delete_vacation_route.py  fillup_schedule_route.py  get_all_claims_route.py  get_all_users_route.py  get_allowed_shifts_values_route.py  get_dates_route.py  get_default_shifts_route.py  get_limits_route.py  get_messages_route.py  get_schedule_route.py  get_shifts_values_route.py  get_total_max_route.py  get_vacations_for_table.py  get_vacations_route.py  getclaims.py  getusers.py  health.py  save_all_claims_route.py  save_claims_route.py  save_default_shifts_route.py  save_new_worker_route.py  save_schedule_route.py  save_user_settings.py  save_vacation_route.py  verif_user_route.py  verification.py
Burrata/BackEnd/schedule_solver/: schedule_solver.py
Burrata/BackEnd/schemas/: base_api_model.py  schemas.py
Burrata/BackEnd/utils/: constants.py  utils.py
(+207 files in other folders)
