[project]
name = "burrata-back-end"
version = "0.1.0"
description = "Api for Burrata Schedule"
authors = [
    {name = "Yaroslav",email = "yaroslav2005pana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "authx (>=1.6.0,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "ortools (>=9.15.6755,<10.0.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
